Update Brand name

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@ or the functioning of the system. -->
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="MVP Front-End"
+      content="MVP Front-End Brandlyo"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -28,7 +28,7 @@ or the functioning of the system. -->
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React MVP</title>
+    <title>Brandlyo MVP</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
